[package]
name = "predictionmarket"
description = "Demonstration IOTA smart contract implementing a simple prediction market"
license = "Apache License 2.0"
version = "1.0.0"
authors = ["Achim Klein <achim.klein@51nodes.io>"]
edition = "2018"
repository = "https://github.com/iotaledger/wasp"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# essential for smart contract
wasmlib = { git = "https://github.com/iotaledger/wasp", rev = "05516ca" }
# better debugging of panics
console_error_panic_hook = { version = "0.1.6", optional = true }
# tiny allocator for wasm
wee_alloc = { version = "0.4.5", optional = true }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.serde_with]
version = "1.9.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
